# echo-types

./: .editorconfig  .envrc  .gitattributes  .gitignore  .hypatia-ignore  .tool-versions  .zenodo.json  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  AGENTIC.scm  Abstract-Echo-Types  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE.md.audit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  DOCUMENTATION_STATUS.md  ECHO-CNO-BRIDGE-SUMMARY.md  ECOSYSTEM.scm  EXPLAINME.adoc  FOUNDATION_CONTRACT.md  Fidelity-OPEN-postulates.md  INDEX.adoc  Justfile  META.scm  NEUROSYM.scm  PLAYBOOK.scm  PROOF-STATUS.adoc  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  SECURITY.md  STATE.scm  TOPOLOGY.adoc  _handoff.md  decision-tree.adoc  (+8 more)
.github/: dependabot.yml
.well-known/: ai.txt  humans.txt  security.txt
arghda-core/: Cargo.toml  README.md
arghda-core/src/: diagnostic.rs  lib.rs  main.rs  watcher.rs  workspace.rs
arghda-core/src/lint/: mod.rs  orphan_module.rs  safe_pragma.rs
arghda-core/tests/: smoke.rs
audits/: assail-classifications.a2ml
contractiles/: Dustfile.a2ml  Intentfile.a2ml  Mustfile.a2ml  Trustfile.a2ml
docs/: CLAIMS_AUDIT.adoc  COMPREHENSIVE_DOCUMENTATION.md  ECHO-CNO-BRIDGE.adoc  EI2_READING1_PATCHES.adoc  EI2_READING2_PATCHES.adoc  EI2_READINGS_COMPARISON.adoc  EI2_REPORT.adoc  EchoJanusBridge.md  PMPL-NARRATIVE.adoc  PRIORITIZED_PROOF_ROADMAP.md  ProofRoadmap.md  STABILITY_ANALYSIS.md  WORK_PLAN.md  arghda-spec.adoc  assessment.adoc  bridge-status.md  buchholz-plan.adoc  build.md  characteristic.adoc  foundation.adoc  (+17 more)
(+416 files in other folders)
