# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025-2026 Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>
[package]
name = "arghda-core"
version = "0.1.0"
edition = "2021"
description = "Lightweight proof-workspace manager for Agda"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/echo-types"

[[bin]]
name = "arghda"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
